# FormulaManager

./: .gitignore  .linear-sync.yaml  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
docs/: database.md
docs/adr/: 0001-supabase-self-hosted-su-vps-con-salvataggi-a-checkpoint.md  0002-textual-come-tui-con-motore-di-gioco-puro.md  0003-telecronaca-a-template-parametrici-senza-llm.md  0004-sqlite-locale-come-database-di-gioco.md
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-12/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-13/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-14/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/2026-06-15/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-16/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-22/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
scripts/: play.sh  play_market.py  play_market.sh  reset_db.sh
specs/: SYSTEM.md
specs/01-post-mvp/: project-specs.md
specs/01-sistemazione-bug/: project-specs.md
specs/02-fondamenta/: project-specs.md
specs/03-motore-di-gara/: project-specs.md
specs/04-weekend-interattivo/: project-specs.md
specs/05-economia-e-sviluppo/: project-specs.md
src/fm_engine/: race.py  (+16 more)
supabase/: README.md  config.toml  seed.sql
tests/: conftest.py
(+369 files in other folders)
