[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formula-manager"
version = "0.1.0"
description = "Gioco manageriale di motorsport single-player su terminale (TUI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
fm = "fm_tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fm_engine", "src/fm_persistence", "src/fm_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]
